# finance

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  finance.bat  pyproject.toml  方案.md
.github/workflows/: codeql-analysis.yml
src/: main.py
src/adaptor/inbound/: show_data.py
src/adaptor/outbound/: currency.py  ticker.py
src/db/: __init__.py  common.py  entity.py
src/outbound/: currency.py
src/pages/: 1_当前财富看板.py  2_未来财富预测.py  3_使用pyecharts.py  3_桑葚图用例.py  3_股票买入和现金平账.py  4_sankey_diagram.py  4_汇率换算.py  4_饼状图用例.py  5_交易详细数据.py  6_设置.py  7_数据导入导出.py  8_股票分析.py
src/pages/components/: charts.py  metrics.py
src/pages/utils/: common.py
src/service/: adjust.py  calculate.py  dashboard_data.py  exchange_rate_service.py  future_wealth_data.py  simulate.py  sync.py  test_transaction_io_service.py  ticker.py  transaction.py  transaction_details_service.py  transaction_io_service.py  transaction_management.py
src/utils/: logger.py  timing.py
tests/: adjust_currency_test.py
