[project]
name = "finance"
version = "0.1.0"
description = "个人财富管理应用"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.17.8",
    "curl-cffi>=0.11.3",
    "numerize>=0.12",
    "numpy~=2.2.6",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "streamlit-echarts>=0.4.0",
]
